# lstar

./: .gitignore  COVERAGE.md  LICENSE  MANIFEST.in  README.md  SUPPORT.md  pyproject.toml  setup.py
.claude/: CLAUDE.md
.claude/skills/lstar/: SKILL.md
.claude/skills/lstar/reference/: conversions.md  cpp.md  model.md  python.md  r.md  recipes.md
.github/workflows/: R-CMD-check.yaml  ci.yml  wheels.yml
R/: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  cran-comments.md
R/R/: backed.R  collection.R  cpp11.R  de.R  kernels.R  lstar.R  profile_conos.R  profile_pagoda2.R  profile_sce.R  profile_seurat.R  profile_viewer.R  view.R  viewer.R
R/inst/include/libzarr/: array.hpp  codecs.hpp  codecs_blosc.hpp  group.hpp  (+7 more)
R/man/: col_sum_by_group.Rd  collection_from.Rd  dot-lstar_drop_cache.Rd  extend_for_viewer.Rd  field_value.Rd  lstar_markers.Rd  lstar_read.Rd  lstar_read_block.Rd  lstar_read_genes.Rd  lstar_stream_col_sum_by_group.Rd  lstar_write.Rd  lstar_write_viewer.Rd  print.lstar_dataset.Rd  read_conos.Rd  read_pagoda2.Rd  read_sce.Rd  read_sce_backed.Rd  read_seurat.Rd  read_seurat_backed.Rd  stream_col_stats.Rd  view.Rd  viewer_extend.Rd  write_conos.Rd  write_pagoda2.Rd  write_sce.Rd  write_seurat.Rd
R/src/: Makevars  cpp11.cpp  lstar_cpp.cpp
R/tests/: testthat.R
R/tests/testthat/: test-kernels.R  test-pagoda2.R  test-profiles.R  test-roundtrip.R  test-view.R  test-viewer-export.R  test-viewer.R
R/vignettes/: converting-formats.Rmd
build_tools/: cibw_macos_openmp.sh  cibw_macos_repair.sh  macos_libomp_repro.py
conformance/: README.md  arity3.sh  asymmetric_roundtrip.sh  aux.sh  backcompat.sh  backed_targets.sh  binding_parity.py  categorical.sh  chunked.sh  collection.sh  collection_true.sh  conos.sh  convert_cli.sh  cross_format.sh  de.sh  fused_view.sh  induce.sh  js.sh  multimodal_xformat.sh  nullable.sh  partial.sh  passthrough.sh  policy_linter.py  provenance.sh  r_fidelity.sh  r_write_chunked.sh  read_block.sh  real_corpus_r.sh  roundtrip_format.sh  run.sh  sce_versions.sh  seurat_extras.sh  seurat_v2.sh  seurat_versions.sh  shard_r.sh  stream_reduce.sh  v3_corpus.py  v3_corpus.sh  v3_format.sh  v3_gen.py  (+20 more)
conformance/fixtures/: backcompat_check.py  backcompat_gen.py  expected.json
conformance/fixtures/golden_v2.lstar.zarr/: .zattrs  .zmetadata
conformance/fixtures/golden_v3.lstar.zarr/: zarr.json
conformance/sweep/: CATALOG.md  README.md  REPORT.md  RETEST.md  install_and_sweep_seurat.R  retest_local.sh  sweep_anndata.py  sweep_citeseq_10x.R  sweep_conos.R  sweep_integration.R  sweep_mudata.py  sweep_multiome.R  sweep_multiome_10x.R  sweep_perturbation.py  sweep_scrnaseq.R  sweep_scrnaseq_driver.sh  sweep_seurat.R  sweep_seurat_refs.R  sweep_spatial.R  sweep_spatial.py  sweep_spatial_fetch.py  sweep_spatial_fetch_sq.py  sweep_velocity.py
core/: CMakeLists.txt
core/include/libzarr/: array.hpp  codecs.hpp  codecs_gzip.hpp  codecs_zstd.hpp  group.hpp  metadata.hpp  sharding.hpp  store.hpp  types.hpp  v2.hpp  v3.hpp  zip.hpp
core/include/lstar/: lstar.hpp
core/include/nlohmann/: json.hpp
core/test/: bench_colstats.cpp  test_chunked.cpp  test_crossimpl.cpp  test_v3.cpp  test_viewer.cpp  test_zip.cpp
docs/: README.md  conversions.md  examples.md  format.md  mapping.md  model.md  parity.md  principles.md
docs/formats/: anndata.md  seurat.md  singlecellexperiment.md
examples/: bench_real.py  conos_collection_demo.R  convert_h5ad_to_seurat.sh  cross_language_demo.sh  lazy_streaming_demo.py  real_perf.py  roundtrip_chain.py  roundtrip_xlang.sh  seurat_collection_demo.R  stream_convert_demo.py  stream_reduce_bench.sh  streaming_scaling.py
js/: README.md  build.sh  package-lock.json  package.json
js/core/: basis.ts  compute.ts  extend.ts  http-store.ts  index.ts  node-store.ts  policy.ts  reader.ts  view.ts  wasm-source.ts  writer.ts  zip-node.ts  zip.ts
js/scripts/: extend-viewer.ts  read-http.ts
js/test/: basis.test.ts  batched.test.ts  compressed_range.test.ts  compression.test.ts  consolidated.test.ts  dense_bigint.test.ts  encoding_invariance.test.ts  extend_primary.test.ts  fixture_python.json  httpzip_nostore.test.ts  io_dump.py  io_parity.mjs  kernels.test.mjs  make_store.py  multichunk_range.test.ts  range.test.ts  reader.test.ts  reader_dispose.test.ts  reader_parallel.test.ts  shard_range.mjs  sharded_prefetch.test.ts  sparse.test.ts  store_backends.test.ts  textdecoder_resizable.test.mjs  v3_range.mjs  view.test.ts  viewer_compression.test.ts  wasm_corpus.mjs  wasm_reader.test.ts  writer.test.ts  writer_crossread.py  writer_extend.ts  writer_make.ts  zip.test.ts  zip_concurrency.test.ts
js/wasm/: lstar_reader.cpp  lstar_wasm.cpp  lstar_writer.cpp
misc/: Lstar_proposal.md  corpus_acquisition.md  format_coverage.md  induction_design.md  lstar-note-reply.md  plan1.md  response.md  suggestions.md  testing_plan.md  tier1_fidelity_plan.md  tier2_impl_plan.md  tier2_plan.md  views.md
python/: pyproject.toml  setup.py
python/src/lstar/: __init__.py  __main__.py  _accel.cpp  _engine.py  _native_check.py  _sparse.py  aux.py  cli.py  collection.py  de.py  kernels.py  lazy.py  model.py  validate.py  view.py  viewer.py  zarr_io.py
python/src/lstar/profiles/: __init__.py  anndata.py  anndata_direct.py  mudata.py  viewer.py
python/tests/: CORPUS.md  corpus.py  synth.py  test_accel.py  test_anndata_profile.py  test_arity3.py  test_aux.py  test_categorical.py  test_collection_reduce.py  test_convert_viewer_basis.py  test_crossimpl.py  test_de.py  test_determinism.py  test_fuzz.py  test_induce.py  test_lazy.py  test_legacy_format.py  test_mudata.py  test_nullable.py  test_partial.py  test_real_atlas.py  test_roundtrip.py  test_spatial.py  test_stream_write.py  test_synth_faithful.py  test_tier1_promote.py  test_v3_format.py  test_validate.py  test_versions.py  test_view.py  test_viewer.py  test_viewer_profile.py  test_zip.py
python/tests/fixtures/: pancreas_velocity_small.h5ad
python/tests/fixtures/citeseq/: adt.mtx  cells.txt  genes.txt  proteins.txt  rna.mtx
skill/: SKILL.md
skill/references/: recipes.md
(+94 files in other folders)
