[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "lstar"
version = "0.0.1"
description = "L* model and Zarr interchange for single-cell/spatial omics, with a fast C++ core"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Peter Kharchenko", email = "peter.kharchenko@gmail.com" }]
keywords = ["single-cell", "omics", "zarr", "anndata", "interchange", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["numpy", "scipy", "zarr<3"]

[project.optional-dependencies]
anndata = ["anndata"]
mudata = ["mudata"]
direct = ["h5py"]                       # the package-free AnnData backend (lstar convert --backend direct)
all = ["anndata", "mudata", "h5py"]
test = ["anndata", "mudata", "h5py", "numcodecs"]

[project.scripts]
lstar = "lstar.cli:main"

[project.urls]
Homepage = "https://github.com/kharchenkolab/lstar"
Source = "https://github.com/kharchenkolab/lstar"

[tool.setuptools]
package-dir = { "" = "python/src" }

[tool.setuptools.package-data]
lstar = ["py.typed"]                    # PEP 561: ship the type hints to consumers

[tool.setuptools.packages.find]
where = ["python/src"]

# cibuildwheel: build the compiled accelerator across platforms. The package still installs and
# runs (pure-Python fallback) if the extension fails to build, so we don't gate the wheel on it.
[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "*-musllinux_i686 *_i686 pp*"
build-frontend = "build"
test-requires = ["anndata", "numcodecs"]
test-command = "python -c \"import lstar; lstar.show_config(); assert lstar.has_accel(), 'accelerator missing in wheel'\" && python {project}/python/tests/test_lazy.py"

[tool.cibuildwheel.linux]
# manylinux ships gcc with OpenMP; nothing extra needed.

[tool.cibuildwheel.macos]
# OpenMP on macOS needs libomp; install it in the build env.
before-build = "brew install libomp || true"
environment = { MACOSX_DEPLOYMENT_TARGET = "10.14" }
