[build-system]
requires = ["setuptools>=64", "wheel", "pybind11>=2.10"]
build-backend = "setuptools.build_meta"

[project]
name = "lstar-sc"                         # PyPI distribution name ("lstar" is taken); import stays `import lstar`
version = "0.1.5"
description = "L* model and Zarr interchange for single-cell/spatial omics, with a fast C++ core"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Peter Kharchenko", email = "pk.restricted@gmail.com" }]
keywords = ["single-cell", "omics", "zarr", "anndata", "interchange", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = ["numpy", "scipy", "zarr<3"]

[project.optional-dependencies]
anndata = ["anndata"]
mudata = ["mudata"]
direct = ["h5py"]                       # the package-free AnnData backend (lstar convert --backend direct)
all = ["anndata", "mudata", "h5py"]
test = ["anndata", "mudata", "h5py", "numcodecs"]

[project.scripts]
lstar = "lstar.cli:main"

[project.urls]
Homepage = "https://github.com/kharchenkolab/lstar"
Source = "https://github.com/kharchenkolab/lstar"

[tool.setuptools]
package-dir = { "" = "python/src" }

[tool.setuptools.package-data]
lstar = ["py.typed"]                    # PEP 561: ship the type hints to consumers

[tool.setuptools.packages.find]
where = ["python/src"]

# cibuildwheel: build the compiled accelerator across platforms. The package still installs and
# runs (pure-Python fallback) if the extension fails to build, so we don't gate the wheel on it.
[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
# skip targets where numpy/scipy ship no wheels (the test env would source-build them, needing
# OpenBLAS/compilers, and fail): 32-bit (win32, i686) and ALL musllinux (Alpine -- scipy has no musl wheels).
skip = "*-win32 *_i686 *-musllinux* pp*"
build-frontend = "build"
test-requires = ["numcodecs"]   # the wheel test (test_lazy.py) needs only numcodecs; anndata would drag in h5py, which builds from source (no HDF5/compiler in the cibuildwheel test env) and fails on every platform
test-command = "python -c \"import lstar; lstar.show_config(); assert lstar.has_accel(), 'accelerator missing in wheel'\" && python {project}/python/tests/test_lazy.py"

[tool.cibuildwheel.linux]
# manylinux ships gcc with OpenMP; nothing extra needed for the BUILD. Use the manylinux_2_28 image
# (vs the default 2014): its modern pip + full cp311/cp312 numpy/scipy wheel coverage means the test
# env installs deps as wheels instead of source-building scipy (which needs OpenBLAS, absent here).
manylinux-x86_64-image = "manylinux_2_28"

[tool.cibuildwheel.macos]
# OpenMP on macOS needs libomp. Fetch a LOW-deployment-target build (conda-forge llvm-openmp) instead of
# Homebrew's runner-OS-targeted one, so the bundled libomp doesn't force a recent macOS minimum (delocate
# would reject that). setup.py reads $LSTAR_LIBOMP; target 11.0 (the arm64 floor) covers x86_64 too.
# cibuildwheel expands {project} in before-all/test-command but NOT in repair-wheel-command (only
# {wheel}/{dest_dir}/{delocate_archs} there). Stash the project dir here so the repair step can find its script.
before-all = 'bash "{project}/build_tools/cibw_macos_openmp.sh" && printf %s "{project}" > "$HOME/.lstar_project_dir"'
environment = { LSTAR_LIBOMP = "$HOME/libomp", MACOSX_DEPLOYMENT_TARGET = "11.0" }
# After delocate bundles libomp, rename _accel's dependency back to the dyld-coalescible `@rpath/libomp.dylib`
# so a host libomp (scikit-learn/numba/scipy) is REUSED instead of a second copy loading -- the second copy
# is what cross-binds llvm-openmp's __kmp_* machinery and SIGSEGVs on arm64. See the script for the mechanism.
repair-wheel-command = 'bash "$(cat "$HOME/.lstar_project_dir")/build_tools/cibw_macos_repair.sh" {wheel} {dest_dir} {delocate_archs}'
# macOS wheel test also runs the dual-libomp regression: scikit-learn brings a 2nd libomp, then we run the
# extend_for_viewer kernels that crashed. (Overrides the top-level test-requires/test-command for macOS.)
test-requires = ["numcodecs", "scikit-learn"]
test-command = "python -c \"import lstar; lstar.show_config(); assert lstar.has_accel(), 'accelerator missing in wheel'\" && python {project}/python/tests/test_lazy.py && python {project}/build_tools/macos_libomp_repro.py"
